# Perf_gprof_jacobi

./: .gitignore  CMakeLists.txt  README.md  compile-leo-cpu.sh  do_perf_grap_serial.sh  job-gprof2dot.slurm  job-merge-perf-ranks.slurm  job.slurm  launch_gprof_Nranks.sh  launch_perf_Nranks.sh  put_jacobi.txt
JACOBI/include/: Parallel_Timer.hpp  tools.hpp
JACOBI/src/: jacobi.cpp
